commit 2/3 quasi fini

--- a/index.html
+++ b/index.html
@@ -31,37 +31,32 @@
                     </div>
                 </div>
                 <div class="title">
-
+                    <h1>Cryothérapie à Corps Entier</h1>
                 </div>
-                <div class="texte">
-
+                <div class="description">
+                    <p>Go Cryo est le premier centre de Cryothérapie à Corps Entier (CCE) de Serre-Chevalier et du Briançonnais.
+                            Il a été créé par Léo Meyer, ostéopathe depuis 20 ans, pour permettre aux sportifs
+                            et au grand public de bénéficier de cette thérapie puissante et novatrice.</p>
                 </div>
-                <div class="logo-ice-experience">
-
+                <div class="texte-ice-experience">
+                    <h3>ICE EXPERIENCE</h3>
                 </div>
                 <div class="techniques">
-                    <div class="tech">
-                        <img>
-                        <h5></h5>
+                    <div class="tech t1">
+                        <img src="image_smartphone.jpg">
+                        <h5>CRYOTHÉRAPIE</h5>
                     </div>
-                    <div class="tech">
-                        <img>
-                        <h5></h5>
+                    <div class="tech t2">
+                        <img src="image_cryolipolyse.png">
+                        <h5>CRYOLIPOLYSE</h5>
                     </div>
-                    <div class="tech">
-                        <img>
-                        <h5></h5>
+                    <div class="tech t3">
+                        <img src="image_gym.jpg">
+                        <h5>AUTRES SOINS</h5>
                     </div>
                 </div>
             </div>
 
         </main>
-        <footer>
-            <div class="footer">
-                
-            </div>
-        </footer>
     </body>
-    <script src="js/jquery-3.4.1.min.js"></script>
-
 </html>
